--- a/style.css
+++ b/style.css
@@ -1,15 +1,44 @@
+@import url('https://fonts.googleapis.com/css2?family=Roboto:wght@100;300&display=swap');
 body{
-    background-color: rgb(230, 255, 253);
+    background-color: rgb(255, 255, 255);
+    font-family: 'Roboto', sans-serif;
 }
 
 .function{
-    background-color: rgb(208, 255, 247);
+    background-color: rgb(27, 43, 78);
     padding: 10px;
-    border-radius: 25px;
-    border: 1px solid black;
+    border: 1px solid transparent;
     margin-bottom: 10px;
+    color: white;
+    border-radius: 5px;
 }
 
 .function-box{
     display: none;   
+}
+
+.results{
+    background-color: rgba(0, 12, 37, 0.418);
+    padding: 10px;
+    border-radius: 5px;
+    margin-top: 10px;
+}
+
+.btn {
+    background-color: rgb(255, 255, 255);
+    border: 1px solid rgba(0, 12, 37, 0.418);
+    padding: 5px;
+    border-radius: 5px;
+}
+
+.btn:hover {
+    background-color: rgba(255, 255, 255, 0.5);
+    padding: 5px;
+}
+
+.btn:active {
+    background-color: transparent;
+    color: white;
+    border-color: rgba(0, 12, 37, 0.418);
+    padding: 5px;
 }
